# bmstu-oop-sem-4

lab_01/: CMakeLists.txt  Makefile  lab_01  lab_01.pro
lab_01/data/: pyramid-3.txt  pyramid-4.txt
lab_01/inc/: action.h  edge.h  edges.h  figure.h  figure_draw.h  mainwindow.h  my_error.h  point.h  points.h  request.h  ui_mainwindow.h
lab_01/src/: edge.cpp  edges.cpp  figure.cpp  figure_draw.cpp  mainwindow.cpp  mainwindow.ui  my_error.cpp  point.cpp  points.cpp  request.cpp
